--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "axios": "^1.6.2",
+    "clipboard": "^2.0.11",
     "element-plus": "^2.3.4",
     "pinia": "^2.1.7",
     "vue": "^3.2.47",
