--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.6.2",
     "clipboard": "^2.0.11",
     "element-plus": "^2.3.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "pinia": "^2.1.7",
     "vue": "^3.2.47",
     "vue-fragment": "^1.6.0",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue3-print-nb": "^0.1.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
