--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@element-plus/icons": "^0.0.11",
     "axios": "^1.6.2",
     "clipboard": "^2.0.11",
+    "echarts": "^5.5.0",
     "element-plus": "^2.3.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
