--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@element-plus/icons": "^0.0.11",
+    "@vueuse/core": "^10.8.0",
     "axios": "^1.6.2",
     "clipboard": "^2.0.11",
     "echarts": "^5.5.0",
@@ -21,6 +22,7 @@
     "vue": "^3.2.47",
     "vue-fragment": "^1.6.0",
     "vue-router": "^4.2.0",
+    "vue3-count-to": "^1.1.2",
     "vue3-print-nb": "^0.1.4"
   },
   "devDependencies": {
